# taskie

./: Cargo.toml
.woodpecker/: build.yml
client/: Cargo.toml
client/src/: lib.rs
src/: api.rs  main.rs  store.rs
src/stores/: mem.rs
structures/: Cargo.toml
structures/src/: lib.rs
