[package]
name = "taskie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
daggy = "0.8.0"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
eyre = "0.6.8"
serde = { version = "1.0.181", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
