[package]
name = "taskie"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["structures", "client"]

[dependencies]
taskie-structures = { path = "structures" }

axum = "0.6.20"
axum-macros = "0.3.8"
daggy = "0.8.0"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
eyre = "0.6.8"
futures = "0.3.28"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
serde_with = { version = "3.2.0", features = ["time_0_3"] }
thiserror = "1.0.44"
time = "0.3.25"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
block-id = "0.2.1"
once_cell = "1.18.0"
